# Rimworld-Multiplayer

.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: alpha-notes.md  build-beta.yml  build-workshop.yml
Source/: Multiplayer.sln
Source/ChatCommandContracts/: ChatCommandAttributes.cs  ChatCommandContracts.csproj
Source/Client/: ConstantTicker.cs  ModCompatibilityManager.cs  Multiplayer.cs  Multiplayer.csproj  MultiplayerGame.cs  MultiplayerStatic.cs  OnMainThread.cs
Source/Client/AsyncTime/: AsyncWorldTimeComp.cs
Source/Client/Debug/: DebugActions.cs
Source/Client/Desyncs/: DeferredStackTracing.cs  SaveableDesyncInfo.cs  StackTraceLogItem.cs  SyncCoordinator.cs
Source/Client/Factions/: FactionCreator.cs  FactionsWindow.cs  MultifactionPatches.cs
Source/Client/Networking/: HostUtil.cs  JoinData.cs  NetworkingLiteNet.cs  NetworkingSteam.cs
Source/Client/Patches/: AreaSource.cs  VTRSyncPatch.cs
Source/Client/Saving/: SaveLoad.cs  (+1 more)
Source/Common/: Common.csproj  DeferredStackTracingImpl.cs  IChatSource.cs  JoinPointRequestReason.cs  MultiplayerServer.cs  Native.cs  PlayerManager.cs  ServerInitData.cs  ServerPlayer.cs  Version.cs
Source/MultiplayerLoader/: MultiplayerLoader.csproj
Source/Server/: Server.cs
Source/SourceGen/: ChatCommandRegistryGenerator.cs  SourceGen.csproj
Source/Tests/: ChatCommandGeneratorTest.cs  ChatCommandManagerTest.cs  CommandTokenizerTest.cs  PacketTest.cs  ServerTest.cs  StandaloneMapStreamingTest.cs  Tests.csproj
Source/TestsOnMono/: Program.cs
native/: .gitignore  Cargo.toml
native/src/: lib.rs
(+70 files in other folders)
