[package]
name = "framepointer_native"
version = "0.1.0"
edition = "2024"

[dependencies]
backtrace = { version = "0.3.76", default-features = false, features = [] }
libc_alloc = "1.0.7"

[lib]
name = "fp"
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
strip = "debuginfo"

[profile.dev]
panic = "abort"